--- a/packages/storage-firebase/package.json
+++ b/packages/storage-firebase/package.json
@@ -4,8 +4,17 @@
   "description": "Google Firebase storage adapter for RecogitoJS, Annotorious and AnnotoriousOSD",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm run build",
+    "test": "node test/test.js",
+    "build": "rollup --config"
   },
   "author": "Rainer Simon",
-  "license": "BSD-3-Clause"
+  "license": "BSD-3-Clause",
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-babel": "^5.2.2",
+    "rollup": "^2.35.1",
+    "rollup-plugin-uglify": "^6.0.4"
+  }
 }
