--- a/packages/annotorious-smart-tagging/package.json
+++ b/packages/annotorious-smart-tagging/package.json
@@ -4,18 +4,16 @@
   "description": "An automated tagging plugin for Annotorious and AnnotoriousOSD using MobileNet and TensorflowJS",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup --config"
   },
   "author": "Rainer Simon",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^4.5.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-babel": "^5.2.2",
+    "rollup": "^2.35.1",
+    "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
     "@recogito/annotorious-openseadragon": "^2.1.3",
