--- a/packages/annotorious-smart-tagging/package.json
+++ b/packages/annotorious-smart-tagging/package.json
@@ -12,7 +12,10 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "rollup": "^2.35.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
