--- a/packages/annotorious-smart-tagging/package.json
+++ b/packages/annotorious-smart-tagging/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "rollup": "^2.35.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
