--- a/packages/annotorious-smart-tagging/package.json
+++ b/packages/annotorious-smart-tagging/package.json
@@ -20,10 +20,8 @@
     "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
-    "@recogito/annotorious-openseadragon": "^2.1.3",
     "@tensorflow-models/knn-classifier": "^1.2.2",
     "@tensorflow-models/mobilenet": "^2.0.4",
-    "@tensorflow/tfjs": "^2.7.0",
-    "openseadragon": "^2.4.2"
+    "@tensorflow/tfjs": "^2.7.0"
   }
 }
