--- a/packages/annotorious-tilted-box/package.json
+++ b/packages/annotorious-tilted-box/package.json
@@ -4,21 +4,21 @@
   "description": "The Tilted Box selection tool from Recogito - now for Annotorious",
   "main": "src/index.js",
   "scripts": {
-    "start": "rollup --config --watch",
-    "build": "rollup --config"
+    "start": "webpack-dev-server --open --mode=development -d",
+    "build": "webpack --mode=production"
   },
   "author": "Rainer Simon",
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.12.11",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "rollup": "^2.35.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^3.2.0",
+    "terser-webpack-plugin": "^4.2.3",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {}
 }
