--- a/packages/annotorious-tilted-box/package.json
+++ b/packages/annotorious-tilted-box/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@recogito/recogito-client-core": "^1.0.1",
     "tiny-emitter": "^2.1.0"
   }
 }
