--- a/packages/annotorious-tilted-box/package.json
+++ b/packages/annotorious-tilted-box/package.json
@@ -14,7 +14,11 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.3",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
