More work towards editable tilted box

--- a/packages/annotorious-tilted-box/package.json
+++ b/packages/annotorious-tilted-box/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@recogito/annotorious": "^2.2.4",
     "@recogito/recogito-client-core": "^1.0.1",
     "tiny-emitter": "^2.1.0"
   }
