--- a/packages/widget-react-helloworld/package.json
+++ b/packages/widget-react-helloworld/package.json
@@ -2,7 +2,8 @@
   "name": "@recogito/react-helloworld-widget",
   "version": "0.1.0",
   "description": "A minimal code example showing how to build your own editor widgets with React",
-  "main": "src/index.js",
+  "main": "dist/recogito-helloworld-widget.js",
+  "module": "dist/recogito-helloworld-widget.js",
   "scripts": {
     "build": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
