--- a/packages/widget-react-helloworld/package.json
+++ b/packages/widget-react-helloworld/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "terser-webpack-plugin": "^3.1.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.11.0"
