--- a/packages/annotorious-toolbar/package.json
+++ b/packages/annotorious-toolbar/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^3.1.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
