--- a/packages/annotorious-shape-labels/package.json
+++ b/packages/annotorious-shape-labels/package.json
@@ -19,5 +19,8 @@
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@recogito/recogito-client-core": "^1.0.6"
   }
 }
