--- a/packages/annotorious-shape-labels/package.json
+++ b/packages/annotorious-shape-labels/package.json
@@ -4,7 +4,8 @@
   "description": "Shape label plugin for Annotorious and Annotorious OpenSeadragon",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode=development -d"
+    "start": "webpack-dev-server --open --mode=development -d",
+    "build": "webpack --mode=production"
   },
   "author": "Rainer Simon",
   "license": "BSD-3-Clause",
@@ -15,12 +16,10 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^3.1.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "@recogito/recogito-client-core": "^1.0.6"
   }
 }
