--- a/packages/widget-react-helloworld/package.json
+++ b/packages/widget-react-helloworld/package.json
@@ -16,7 +16,8 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
+    "css-loader": "^5.2.5",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^3.1.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
