--- a/packages/storage-legacy-platform/package.json
+++ b/packages/storage-legacy-platform/package.json
@@ -4,20 +4,21 @@
   "description": "A storage adapator that works with the legacy Recogito v.3 annotation platform",
   "main": "src/index.js",
   "scripts": {
-    "build": "rollup --config"
+    "start": "webpack-dev-server --open --mode=development -d",
+    "build": "webpack --mode=production"
   },
   "author": "Rainer Simon",
   "license": "BSD-3-Clause",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.12.11",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "rollup": "^2.35.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-uglify": "^6.0.4"
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "axios": "^0.21.1"
