--- a/packages/annotorious-tilted-box/package.json
+++ b/packages/annotorious-tilted-box/package.json
@@ -7,27 +7,24 @@
     "dist"
   ],
   "scripts": {
-    "start": "webpack-dev-server --open --mode=development -d",
+    "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
   },
   "author": "Rainer Simon",
   "license": "BSD-3-Clause",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "babel-loader": "^8.2.2",
-    "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^4.5.2",
+    "sass": "^1.35.2",
+    "sass-loader": "^10.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@recogito/annotorious": "^2.2.5"
+    "@recogito/annotorious": "^2.5.1"
   }
 }
