--- a/packages/annotorious-tilted-box/package.json
+++ b/packages/annotorious-tilted-box/package.json
@@ -2,10 +2,7 @@
   "name": "@recogito/annotorious-tilted-box",
   "version": "0.1.1",
   "description": "The Tilted Box selection tool from Recogito - now for Annotorious",
-  "main": "src/index.js",
-  "files": [
-    "dist"
-  ],
+  "main": "dist/annotorious-tilted-box.min.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
@@ -20,6 +17,7 @@
     "html-webpack-plugin": "^4.5.2",
     "sass": "^1.35.2",
     "sass-loader": "^10.2.0",
+    "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
