--- a/packages/annotorious-toolbar/package.json
+++ b/packages/annotorious-toolbar/package.json
@@ -2,7 +2,7 @@
   "name": "@recogito/annotorious-toolbar",
   "version": "0.1.2",
   "description": "A simple toolbar for switching Annotorious drawing tools",
-  "main": "dist/annotorious-toolbar.min.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode=development -d",
     "build": "webpack --mode=production"
