--- a/packages/annotorious-tilted-box/package.json
+++ b/packages/annotorious-tilted-box/package.json
@@ -2,7 +2,7 @@
   "name": "@recogito/annotorious-tilted-box",
   "version": "0.1.3",
   "description": "The Tilted Box selection tool from Recogito - now for Annotorious",
-  "main": "dist/annotorious-tilted-box.min.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
