--- a/plugins/annotorious-toolbar/package.json
+++ b/plugins/annotorious-toolbar/package.json
@@ -4,7 +4,7 @@
   "description": "A simple toolbar for switching Annotorious drawing tools",
   "main": "dist/annotorious-toolbar.min.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode=development -d",
+    "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
   },
   "author": "Rainer Simon",
@@ -15,11 +15,10 @@
     "@babel/preset-env": "^7.6.2",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^3.1.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.60.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
