--- a/plugins/annotorious-improved-polygon/package.json
+++ b/plugins/annotorious-improved-polygon/package.json
@@ -20,5 +20,8 @@
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "@recogito/annotorious": "^2.5.8"
   }
 }
