--- a/plugins/annotorious-improved-polygon/package.json
+++ b/plugins/annotorious-improved-polygon/package.json
@@ -22,6 +22,6 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "@recogito/annotorious": "^2.5.8"
+    "@recogito/annotorious": "github:recogito/annotorious"
   }
 }
