--- a/plugins/annotorious-better-polygon/package.json
+++ b/plugins/annotorious-better-polygon/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@recogito/annotorious-improved-polygon",
+  "name": "@recogito/annotorious-better-polygon",
   "version": "0.1.0",
-  "description": "An improved polygon editing tool with more features",
+  "description": "An improved polygon editing tool with more features and better usability",
   "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
