--- a/plugins/annotorious-better-polygon/package.json
+++ b/plugins/annotorious-better-polygon/package.json
@@ -2,7 +2,7 @@
   "name": "@recogito/annotorious-better-polygon",
   "version": "0.1.1",
   "description": "An improved polygon editing tool with more features and better usability",
-  "main": "src/index.js",
+  "main": "dist/annotorious-better-polygon.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
