--- a/plugins/widget-better-tag/package.json
+++ b/plugins/widget-better-tag/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
     "html-webpack-plugin": "^5.5.0",
@@ -28,5 +29,9 @@
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
+  },
+  "peerDependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
