Basic tag functionality restored - now on to suggestions

--- a/plugins/widget-better-tag/package.json
+++ b/plugins/widget-better-tag/package.json
@@ -33,5 +33,9 @@
   "peerDependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
+  },
+  "dependencies": {
+    "@recogito/recogito-client-core": "^1.5.4",
+    "react-transition-group": "^4.4.2"
   }
 }
