--- a/plugins/annotorious-hover-tooltip/package.json
+++ b/plugins/annotorious-hover-tooltip/package.json
@@ -2,7 +2,7 @@
   "name": "@recogito/annotorious-hover-tooltip",
   "version": "0.1.1",
   "description": "A hover tooltip plugin for Annotorious and AnnotoriousOSD",
-  "main": "src/index.js",
+  "main": "dist/annotorious-hover-tooltip.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
