--- a/plugins/annotorious-shape-labels/package.json
+++ b/plugins/annotorious-shape-labels/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@recogito/annotorious-shape-labels",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Shape label plugin for Annotorious and Annotorious OpenSeadragon",
-  "main": "src/index.js",
+  "main": "dist/annotorious-shape-labels.min.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
