--- a/plugins/annotorious-osd-snappable-polygon/package.json
+++ b/plugins/annotorious-osd-snappable-polygon/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@recogito/annotorious-osd-snap",
+  "name": "@recogito/annotorious-osd-snappable-polygon",
   "version": "0.1.0",
-  "description": "A plugin for Annotorious OSD which implements mouse cursor snapping behavior",
+  "description": "A plugin for Annotorious OSD which implements a polygon tool with mouse cursor snapping behavior",
   "main": "dist/annotorious-osd-snap.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
